--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,23 @@
-.App {
+.app {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.root_container {
+  width: 100%;
+  max-width: 768px;
+  margin: 0 auto;
+  border: 1px solid red;
+  height: 100vh;
+  padding: 2rem 0;
+  box-sizing: border-box;
 }
+
+
+
+
+
+
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -13,20 +25,6 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
