--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,11 @@
 :root {
-  --app-bg-color: #f6ede1;
-  --button-bg-color: #bb4bf5;
+  --app-bg-color: #ffffff;
+  --button-next-bg-color: #b61ecd;
   --answer-bg-color: #e0d1ba;
-  --answer-border-color: #c0bfbf;
+  --answer-active-bg-color: #f5f5f5;
+  --answer-border-color: #efefef;
+  --answer-wrong-color: #e74128;
+  --answer-correct-color: #52b358;
 }
 
 * {
@@ -11,10 +14,8 @@
 
 body {
   min-width: 320px;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-size: 16px;
+  font-family: 'PT Serif', serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
