--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -6,3 +6,45 @@
   justify-content: center;
   align-items: center;
 }
+
+.start__content {
+  display: block;
+}
+
+.start__content p {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1rem;
+  display: block;
+  width: 60%;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
+  color: black;
+}
+
+.start__button {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1rem;
+  display: block;
+  width: 30%;
+  color: #ffffff;
+  font-size: 16px;
+  letter-spacing: 2px;
+  font-weight: 700;
+  text-transform: uppercase;
+  border: 1px solid var(--button-next-bg-color);
+  border-radius: 0.5rem;
+  background-color: var(--button-next-bg-color);
+  transition: all .25s ease;
+  cursor: pointer;
+}
+
+.start__button:hover {
+  opacity: 0.85;
+}
+
+.start__button:active {
+  box-shadow: 0 0 0 2px var(--button-next-bg-color);
+}
