--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -36,11 +36,16 @@
   letter-spacing: 2px;
   font-weight: 700;
   text-transform: uppercase;
+  background-color: var(--button-next-bg-color);
   border: 1px solid var(--button-next-bg-color);
   border-radius: 0.5rem;
-  background-color: var(--button-next-bg-color);
   transition: all .25s ease;
   cursor: pointer;
+}
+
+.card__button--loading {
+  background-color: var(--disabled-color);
+  border: 1px solid var(--disabled-color);
 }
 
 .card__button:hover {
