--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -28,7 +28,8 @@
   padding: 1rem;
   display: block;
   color: #ffffff;
-  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
   letter-spacing: 2px;
   font-weight: 700;
   text-transform: uppercase;
