--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -1,3 +1,9 @@
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .loader__img {
   max-width: 20px;
   height: 20px;
